--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@ section:last-child .First-grid div:nth-of-type(3) > div:first-child {
 
 
 
+
+
+
 section .First-grid div:nth-of-type(3):hover > div:last-child{
 
     opacity: 1;
@@ -231,7 +234,7 @@ section:first-child .Second-grid div:nth-of-type(2) {
 
 section:first-child .Second-grid div:nth-of-type(3) {
 
-	border-radius: 0 15px 15px 15px;
+    border-radius: 0 15px 15px 15px;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -266,6 +269,72 @@ section:first-child .Second-grid div p {
 
 }
 
+/*   Boxes and images second section */
 
+section:last-child .Second-grid div:nth-of-type(1) {
+
+	border-radius: 15px 15px 15px 0;
+    background-color: rgb(156, 139, 155);
+    padding: 10px;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+
+}
+
+section:last-child .Second-grid div:nth-of-type(2) {
+
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: rgb(156, 139, 155);
+    padding: 10px;
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+
+}
+
+section:last-child .Second-grid p {
+
+    color: rgb(247, 248, 249);
+
+}
+
+section:last-child .Second-grid div:nth-of-type(3) {
+
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-image: url(img/Bts1.jpg);
+    position: relative; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 4 / 6;
+    grid-row: 1 / 2;
+
+}
+
+section:last-child .Second-grid div:nth-of-type(3) p {
+
+    z-index: 100;
+    color: rgb(255, 254, 255);
+    position: absolute; 
+    margin: 0;
+    top: 80%;
+    left: 5%;
+
+}
+
+section:last-child .Second-grid div:nth-of-type(4) {
+
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    background-color: rgb(156, 139, 155);
+    padding: 5px;
+    grid-column: 6 / 7;
+    grid-row: 1 / 2;
+
+}
 
 
