--- a/style.css
+++ b/style.css
@@ -31,6 +31,44 @@ body {
     border-radius: 20px ;
 }
 
+/*   Navigering */
+
+nav a:nth-child(2),
+
+nav a:nth-child(2) a:hover {
+
+    border: 1px solid rgba(255, 255, 255, 0.733);
+    color: rgba(44, 42, 42, 0.826);
+    box-shadow: 0px 0px 15px 5px rgb(190, 184, 184);
+    background-color: rgba(251, 251, 251, 0.308);
+    font-weight: 1000;
+
+}
+
+nav a:hover {
+
+    color: rgba(255, 255, 255, 0.489);
+    background-color:  rgba(0, 0, 0, 0.375);
+}
+
+nav {
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav a {
+    background-color: rgba(255, 255, 255, 0.525);
+    color: rgba(0, 0, 0, 0.847);
+    padding: 15px;
+    font-size: 20px;
+    border-radius: 15px;
+    text-align: center;
+    text-decoration: none;
+}
 
 section {
 
@@ -234,7 +272,8 @@ section:first-child .Second-grid div:nth-of-type(2) {
 
 section:first-child .Second-grid div:nth-of-type(3) {
 
-    border-radius: 0 15px 15px 15px;
+	border-radius: 0 15px 15px 15px;
+    background-image: url(img/Jungkook6.jpg); 
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
