--- a/media.css
+++ b/media.css
@@ -1,7 +1,7 @@
-@media (min-width: 500px) and (max-width: 799px) {
+@media (max-width:500px) {
 
     body {
-
+        flex-direction: column-reverse;
         background-size: cover;
         background-position: right;
         background-image: url(img/Jungkook3.jpg);
@@ -25,7 +25,7 @@
     }
 
     section .First-grid {
-
+        
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(1fr 1fr 1fr 1fr 1fr);
     }
@@ -34,7 +34,8 @@
 
         grid-column: 1 / 5;
         grid-row: 1 / 3;
-        height: 420px;
+        height: 300px;
+        width:400px;
     }
 
     section .First-grid div:nth-of-type(1),
@@ -121,12 +122,21 @@
     }
 
 }
-@media (min-width:800px) and (max-width:899px) {
+@media (min-width:501px) and (max-width:899px) {
+
+.Background {
   h1 {
-    font-size: 7vw;
+    font-size: 5vw;
   }
+      h2 {
+    font-size: 2rem;
+}
+  h3 {
+    font-size: 1.5rem;
+}
 
 }
+
 @media (min-width:900px) and (max-width:1200px) {
   h1 {
     font-size: 8vw;
@@ -137,4 +147,27 @@
   nav a {
     font-size: 2vw;
   }
+    h2 {
+    font-size: 2rem;
+}
+  h3 {
+    font-size: 1.5rem;
+}
+}
+}
+@media (width >= 1200px) {
+    main {
+        width: 960px;
+    }
+         .Background {
+            width: 990px;
+    }
+    
+    body {
+        lenght: 1000px;
+        background-size: cover;
+        background-position: right;
+        background-image: url(img/Jungkook3.jpg);
+    }
+
 }
